# aliengo_navigation

./: README.md
aliengo_controller/: CMakeLists.txt  package.xml
aliengo_controller/include/aliengo_controller/: controller.h  shifting_control.h
aliengo_controller/src/: controller.cpp  shifting_control.cpp  trot.cpp  walk.cpp
aliengo_footstep_planner/: CMakeLists.txt  package.xml
aliengo_footstep_planner/include/: quad_footstep_planner.h
aliengo_footstep_planner/include/aliengo_footstep_planner/: quad_footstep_planner.h
aliengo_footstep_planner/src/: quad_footstep_planner.cpp  quad_footstep_planner_node.cpp
aliengo_kindym/: CMakeLists.txt  package.xml
aliengo_kindym/include/aliengo_kindym/: aliengo_kindym.h
aliengo_kindym/src/: aliengo_kinematics.cpp
aliengo_msgs/: CMakeLists.txt  package.xml
aliengo_msgs/msg/: quad_footstep.msg  robot_state.msg  transition_foothold.msg
aliengo_slam/: CMakeLists.txt  package.xml
aliengo_slam/config/: rtab_rosparam.yaml
aliengo_slam/config/elevation_maps_config/: postprocessor_pipeline.yaml  robot_elm.yaml
aliengo_slam/launch/: elevation_mapping.launch  rtab_map.launch  slam.launch
aliengo_slam/rviz/: slam_with_elev.rviz
aliengo_utils/: CMakeLists.txt  package.xml
aliengo_utils/config/: aliengo_footplan_params.yaml  dogbot_config.yaml  dogbot_footplan_params.yaml  global_planner.yaml  robot_config.yaml  temp.yaml
aliengo_utils/launch/: Aliengo_sim.launch  Global_Planner.launch  dogbot_sim.launch  foot_planner.launch  temp.launch
dogbot_description/launch/: rviz.launch
dogbot_description/urdf/: dogbot.urdf  my_sdf.sdf
dogbot_gazebo/config/: dogbot_control.yaml
dogbot_gazebo/launch/: dog.launch
dogbot_gazebo/src/: dogbot_footstate_publisher.py  dogbot_interface.py
unitree_ros-master/robots/aliengo_description/: CMakeLists.txt  package.xml
unitree_ros-master/robots/aliengo_description/config/: robot_control.yaml
unitree_ros-master/robots/aliengo_description/launch/: aliengo_rviz.launch
unitree_ros-master/robots/aliengo_description/src/: footstep_current_state_node.cpp
unitree_ros-master/robots/aliengo_description/xacro/: aliengo.urdf
unitree_ros-master/unitree_controller/src/: body.cpp  servo.cpp
unitree_ros-master/unitree_gazebo/: CMakeLists.txt  package.xml
unitree_ros-master/unitree_gazebo/launch/: aliengo_gazebo.launch
unitree_ros-master/unitree_gazebo/models/stairs/: model.sdf
unitree_ros-master/unitree_gazebo/models/turtlebot3_house/: model.sdf
unitree_ros-master/unitree_gazebo/worlds/: earth.world
